<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    	android:id="@+id/viewParent"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical"
        android:background="@drawable/bg_whathots" 
        > 
       	
       	<com.markupartist.android.widget.ActionBar
	        android:id="@+id/actionbar"
	        style="@style/ActionBar"
	        android:layout_alignParentTop ="true"
        />
       	
       	<LinearLayout 
       	    android:layout_width="fill_parent" android:layout_height="wrap_content"
       	    android:background="@drawable/im_main_item_bg"
       	    android:layout_marginTop="5dp" 
       	    android:layout_marginLeft="5dp" android:layout_marginRight="5dp"
       	    android:layout_marginBottom="10dp"
       	    android:orientation="vertical"
       	    >
		       	    
       	    <LinearLayout 
       	        android:layout_width="fill_parent"
       	        android:layout_height="wrap_content"
       	        android:orientation="horizontal"
       	        android:layout_marginTop="3dp"
       	        >
       	        <ImageView
       	            android:layout_width="35dp"
       	            android:layout_height="35dp"
       	            android:layout_gravity="center_vertical"
       	            android:scaleType="fitXY"
       	            android:src="@drawable/ic_facebook_32" />
       	        
       	        <LinearLayout 
       	            android:layout_width="fill_parent"
       	            android:layout_height="wrap_content"
       	            android:orientation="vertical"
       	            >
       	            
       	            <LinearLayout 
       	                android:layout_width="fill_parent"
       	                android:layout_height="wrap_content"
       	                android:orientation="horizontal"
       	                android:layout_marginLeft="5dp"
       	                >
       	                
       	                <TextView 
		       	            android:layout_width="wrap_content"
		       	            android:layout_height="wrap_content"
		       	            android:gravity="clip_vertical"
		       	            android:text="@string/connected"
							android:textColor="#222222"
							android:layout_marginLeft="5dp"
		       	            />
       	                
       	                <TextView 
		       	            android:layout_width="wrap_content"
		       	            android:layout_height="wrap_content"
		       	            android:gravity="center_vertical"
		       	            android:text="Dinh Thai ha"
							android:textColor="#222222"
							android:textStyle="bold"
							android:textSize="16dp"
							android:layout_marginLeft="5dp"
		       	            />
       	                
       	            </LinearLayout>
       	            
       	            <Button 
	       	            android:layout_width="wrap_content"
	       	            android:layout_height="wrap_content"
	       	            android:gravity="center_vertical"
	       	            android:text="@string/disconnect"
						android:textColor="#00a2a2"
						android:textStyle="bold"
						android:background="@null"
						android:layout_marginLeft="10dp"
						android:layout_marginTop="3dp"
	       	            />
       	            
       	        </LinearLayout>
       	        
       	    </LinearLayout>
       	    
       	    
       	    <LinearLayout 
       	        android:layout_width="fill_parent"
       	        android:layout_height="wrap_content"
       	        android:orientation="horizontal"
       	        android:layout_marginTop="20dp"
       	        >
       	        
       	        <ImageButton
       	            android:layout_width="26dip"
       	            android:layout_height="26dip"
       	            android:layout_gravity="center_vertical"
       	            android:scaleType="centerCrop"
       	            android:src="@drawable/ic_wh_checkbox"
       	            android:background="@null"
       	            />
       	        
       	        <TextView 
       	            android:layout_width="wrap_content"
       	            android:layout_height="wrap_content"
       	            android:gravity="clip_horizontal|center_vertical"
       	            android:text="@string/default_share_facebook"
					android:textColor="#242424"
					android:layout_marginLeft="10dp"
       	            />
       	    </LinearLayout>
       	    
       	    <ImageView 
       	        android:layout_width="fill_parent"
       	        android:layout_height="wrap_content"
       	        android:background="@drawable/line2"
       	        android:layout_marginTop="10dp"
       	        />
       	    
       	    <LinearLayout 
       	        android:layout_width="fill_parent"
       	        android:layout_height="wrap_content"
       	        android:orientation="horizontal"
       	        android:layout_marginTop="10dp"
       	        >
       	        
       	        <ImageButton
       	            android:layout_width="26dip"
       	            android:layout_height="26dip"
       	            android:layout_gravity="center_vertical"
       	           	android:scaleType="centerCrop"
       	            android:src="@drawable/ic_wh_checkbox"
       	            android:background="@null"
       	            />
       	        
       	        <TextView 
       	            android:layout_width="wrap_content"
       	            android:layout_height="wrap_content"
       	            android:gravity="clip_horizontal"
       	            android:text="@string/default_report_facebook"
					android:textColor="#242424"
					android:layout_marginLeft="10dp"
       	            />
       	    </LinearLayout>
   	    </LinearLayout>

</LinearLayout>
